feat: redesign footer layout and add bottom spacing to last section

--- a/src/App.css
+++ b/src/App.css
@@ -168,6 +168,10 @@ a.link:hover {
   padding: 0;
 }
 
+.section-last {
+  margin-top: 50px;
+}
+
 /* Collapsible Sections */
 .section-header {
   padding: 1rem;
