--- a/ten-factors-new/src/index.css
+++ b/ten-factors-new/src/index.css
@@ -20,6 +20,7 @@
   }
   
   body {
+    overflow-x: hidden;
     @apply text-primary bg-white;
     font-synthesis: none;
     text-rendering: optimizeLegibility;
