--- a/ten-factors-new/src/index.css
+++ b/ten-factors-new/src/index.css
@@ -33,8 +33,16 @@
     @apply bg-yellow-400 text-primary px-6 py-3 rounded-lg font-medium transition-all duration-300 shadow-sm hover:shadow-md text-nowrap;
   }
   
+  .btn-primary:hover {
+    @apply bg-yellow-500 transform -translate-y-0.5;
+  }
+  
   .container-custom {
     @apply container mx-auto px-4 sm:px-6 lg:px-8;
+  }
+
+  .primary-shadow {
+    box-shadow: 0px 4px 16px 0px rgba(19, 78, 94, 0.13);
   }
 
   .primary-gradient {
@@ -55,10 +63,6 @@
     background-size: contain;
     background-repeat: no-repeat;
     background-position: right;
-  }
-  
-  .btn-primary:hover {
-    @apply bg-yellow-500 transform -translate-y-0.5;
   }
 }
 
