--- a/ten-factors-new/src/index.css
+++ b/ten-factors-new/src/index.css
@@ -64,6 +64,22 @@
     background-repeat: no-repeat;
     background-position: right;
   }
+
+  .primary-bg-cover {
+    position: relative;
+  }
+  
+  .primary-bg-cover::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-image: url('./assets/images/c8f261f91eedfc8b7dcff7261e963d999617b761.svg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    opacity: 0.1;
+  }
 }
 
 /* Animations */
