--- a/ten-factors-new/src/index.css
+++ b/ten-factors-new/src/index.css
@@ -42,7 +42,7 @@
   }
 
   .primary-shadow {
-    box-shadow: 0px 4px 16px 0px rgba(19, 78, 94, 0.13);
+    @apply shadow-[0_4px_16px_0_rgba(19,78,94,0.13)];
   }
 
   .primary-gradient {
@@ -63,6 +63,12 @@
     background-size: contain;
     background-repeat: no-repeat;
     background-position: right;
+  }
+
+  @media (max-width: 460px) {
+    .ralabs-part-bg {
+      background-size: cover;
+    }
   }
 
   .primary-bg-cover {
