feat: landing page fixes

--- a/ten-factors-new/src/index.css
+++ b/ten-factors-new/src/index.css
@@ -71,20 +71,29 @@
     }
   }
 
-  .primary-bg-cover {
-    position: relative;
-  }
-  
-  .primary-bg-cover::before {
-    content: "";
+  .unique-bg {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-image: url('./assets/images/c8f261f91eedfc8b7dcff7261e963d999617b761.svg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    opacity: 0.1;
+    overflow: hidden;
+  }
+
+  .unique-bg img {
+    position: absolute;
+    top: 58%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    aspect-ratio: 1440 / 828;
+    object-fit: cover;
+    object-position: center;
+    opacity: 0.08;
+  }
+  @media (max-width: 64rem) {
+
+    .unique-bg img {
+      display: none;
+    }
   }
 }
 
